# NotebookLM-API

./: .gitignore  README.md  pyproject.toml  run_tests.py
src/notebooklm_automator/: __init__.py  main.py
src/notebooklm_automator/api/: __init__.py  app.py  models.py  routes.py
src/notebooklm_automator/core/: __init__.py  audio.py  automator.py  browser.py  cookies.py  selectors.py  sources.py
tests/: conftest.py
tests/api/: __init__.py  test_routes.py
tests/e2e/: __init__.py  test_full_flow.py
tests/ui/: __init__.py  test_automator.py
tests/unit/: __init__.py  test_audio.py  test_browser.py  test_selectors.py  test_sources.py
